[gd_scene load_steps=66 format=2]

[ext_resource path="res://World/Player.gd" type="Script" id=1]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkDown0.png" type="Texture" id=2]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkUpMove01.png" type="Texture" id=3]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkDownMove01.png" type="Texture" id=4]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttackUp6.png" type="Texture" id=5]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttack0.png" type="Texture" id=6]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttackUp7.png" type="Texture" id=7]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttackUp4.png" type="Texture" id=8]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttack3.png" type="Texture" id=9]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttackUp3.png" type="Texture" id=10]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttackUp8.png" type="Texture" id=11]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttackSide5.png" type="Texture" id=12]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttackUp0.png" type="Texture" id=13]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttack5.png" type="Texture" id=14]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttack4.png" type="Texture" id=15]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttackUp5.png" type="Texture" id=16]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttack8.png" type="Texture" id=17]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttack1.png" type="Texture" id=18]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttackUp1.png" type="Texture" id=19]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttackUp2.png" type="Texture" id=20]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttack2.png" type="Texture" id=21]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttackSide3.png" type="Texture" id=22]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttackSide2.png" type="Texture" id=23]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttackSide1.png" type="Texture" id=24]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttackSide6.png" type="Texture" id=25]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttackSide0.png" type="Texture" id=26]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttackSide4.png" type="Texture" id=27]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkAttackSide7.png" type="Texture" id=28]
[ext_resource path="res://SpriteResources/PlayerSpriteSheet/LinkSideMove01.png" type="Texture" id=29]
[ext_resource path="res://Hurt_Hit_Boxes/Hitbox.tscn" type="PackedScene" id=30]

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 29 )
region = Rect2( 0, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 29 )
region = Rect2( 32, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 29 )
region = Rect2( 64, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 29 )
region = Rect2( 96, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 29 )
region = Rect2( 128, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 29 )
region = Rect2( 160, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 29 )
region = Rect2( 192, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 29 )
region = Rect2( 224, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 29 )
region = Rect2( 256, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 29 )
region = Rect2( 288, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 32, 28 )

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ SubResource( 33 ), ExtResource( 13 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 16 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 11 ) ],
"loop": false,
"name": "AttackUp",
"speed": 7.5
}, {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 17 ) ],
"loop": false,
"name": "AttackDown",
"speed": 7.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "MoveSide",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 27 ), ExtResource( 12 ), ExtResource( 25 ) ],
"loop": false,
"name": "AttackSide",
"speed": 7.0
}, {
"frames": [ ExtResource( 2 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "MoveDown",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "MoveUp",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 13.5, 12 )

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 47.125, 28.9375 )

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 27.875, 35 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 16, 16 )
collision_layer = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 20, 17.5 )
scale = Vector2( 2.25, 2.25 )
frames = SubResource( 31 )
animation = "MoveDown"
speed_scale = 2.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 18.5, 31 )
shape = SubResource( 32 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Hitbox" parent="." instance=ExtResource( 30 )]
modulate = Color( 0.968627, 0.239216, 0.0705882, 0.72549 )
position = Vector2( 1, 0 )
collision_layer = 0
collision_mask = 8

[node name="AttackDown" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 22, 64.125 )
shape = SubResource( 34 )
disabled = true
one_way_collision_margin = 18.2

[node name="AttackLeft" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -21.125, 27 )
shape = SubResource( 35 )
disabled = true

[node name="AttackRight" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 67.25, 28 )
shape = SubResource( 35 )
disabled = true

[node name="AttackUp" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 24.125, -10.0625 )
shape = SubResource( 34 )
disabled = true
one_way_collision_margin = 18.2

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
